--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laravel/framework": "^8.12",
         "laravel/passport": "10.1",
         "laravel/tinker": "^2.5",
-        "league/flysystem-aws-s3-v3": "*",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "midtrans/midtrans-php": "2.3.2"
     },
     "require-dev": {
